objects/ASI_CRM_AccountMovement__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Movements</relationshipLabel>
        <relationshipName>ASI_TW_CRM_AccountMovements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FieldLabel__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_NewValueName__c</fullName>
        <label>New Value Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_NewValue__c</fullName>
        <label>NewValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_OldValueName__c</fullName>
        <label>Old Value Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_OldValue__c</fullName>
        <label>OldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region_Sharing__c</fullName>
        <label>Region (Sharing)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <formula>TEXT(ASI_CRM_Account__r.ASI_TH_CRM_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RejectedReason__c</fullName>
        <label>Rejected Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_UpdateDateTime__c</fullName>
        <label>UpdateDateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Account Movement</label>
    <listViews>
        <fullName>ASI_CRM_TW_Account_Movements</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Account__c</columns>
        <columns>ASI_CRM_FieldLabel__c</columns>
        <columns>ASI_CRM_OldValueName__c</columns>
        <columns>ASI_CRM_NewValueName__c</columns>
        <columns>ASI_CRM_UpdateDateTime__c</columns>
        <columns>ASI_CRM_Approved__c</columns>
        <columns>ASI_CRM_Rejected__c</columns>
        <columns>ASI_CRM_IsDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_AccountMovement__c.ASI_CRM_TW_AccountMovement</value>
        </filters>
        <label>TW Account Movements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Account_Movements_Pending</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Account__c</columns>
        <columns>ASI_CRM_Field__c</columns>
        <columns>ASI_CRM_OldValue__c</columns>
        <columns>ASI_CRM_NewValue__c</columns>
        <columns>ASI_CRM_UpdateDateTime__c</columns>
        <columns>ASI_CRM_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_AccountMovement__c.ASI_CRM_TW_AccountMovement</value>
        </filters>
        <filters>
            <field>ASI_CRM_IsDeleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_CRM_Approved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>TW Account Movements - Pending</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Movement No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Movements</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_AccountMovement</fullName>
        <active>true</active>
        <label>TW Account Movement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>